webp / icon / menu

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="b3m3">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="@img/logo.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="@img/favicon.png">
   <link rel="stylesheet" href="css/style.min.css">
   <title>Brustzentrum Heidelberg</title>
 </head>
@@ -116,7 +116,7 @@
           <div class="container">
             <div class="team__main">
 
-              <img class="team__bg" src="@img/team/bg.png" alt="background">
+              <img class="team__bg" src="@img/team/bg.webp" alt="background">
 
               <div class="team__images images-team">
 
@@ -174,7 +174,7 @@
                   </div>
 
                   <div class="body-verfugen__img ibga">
-                    <img src="@img/verfugen/01.png" alt="image">
+                    <img src="@img/verfugen/01.webp" alt="image">
                   </div>
                 </div>
 
@@ -186,7 +186,7 @@
                   </div>
 
                   <div class="body-verfugen__img ibga">
-                    <img src="@img/verfugen/02.png" alt="image">
+                    <img src="@img/verfugen/02.webp" alt="image">
                   </div>
                 </div>
 
@@ -199,7 +199,7 @@
                   </div>
 
                   <div class="body-verfugen__img ibga">
-                    <img src="@img/verfugen/03.png" alt="image">
+                    <img src="@img/verfugen/03.webp" alt="image">
                   </div>
                 </div>
 
@@ -212,7 +212,7 @@
                   </div>
 
                   <div class="body-verfugen__img ibga">
-                    <img src="@img/verfugen/04.png" alt="image">
+                    <img src="@img/verfugen/04.webp" alt="image">
                   </div>
                 </div>
 
@@ -231,7 +231,7 @@
                   </div>
 
                   <div class="body-verfugen__img ibga">
-                    <img src="@img/verfugen/05.png" alt="image">
+                    <img src="@img/verfugen/05.webp" alt="image">
                   </div>
                 </div>
 
