rename header btn / remove header link / add link in footer

--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -2,8 +2,12 @@
   <div class="container">
     <div class="footer__main">
       <h2 class="footer__title title">Kontakt: </h2>
-      <p class="footer__text">Notfälle: </p>
-      <p class="footer__text">Anmeldung/Sekretariat: </p>
+      <p class="footer__text">Notfälle:
+        <a class="footer__link" href="tel:06221-4886000">06221-4886000</a>
+      </p>
+      <p class="footer__text">Anmeldung/Sekretariat:
+        <a class="footer__link" href="mailto:brustzentrum@kse-hd.de">brustzentrum@kse-hd.de</a>
+      </p>
     </div>
   </div>
 </footer>
