--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -1,9 +1,8 @@
 <header class="header">
   <div class="container">
     <div class="header__body">
-      <a class="header__mail" href="mailto:brustzentrum@kse-hd.de">brustzentrum@kse-hd.de</a>
       <a class="header__phone" href="tel:062214886000"><span class="icon-phone"></span> 06221-4886000</a>
-      <a class="header__btn btn" href="#">Appointment</a>
+      <a class="header__btn btn" href="#">Termine</a>
     </div>
 
     <div class="menu">
@@ -28,7 +27,6 @@
             <a class="menu__link" href="#kontakt">Kontakt</a>
             <a class="header__phone menu__phone" href="tel:062214880"><span class="icon-phone"></span> 06221 - 48
               80</a>
-            <a class="header__mail menu__mail" href="mailto:brustzentrum@kse-hd.de">brustzentrum@kse-hd.de</a>
           </li>
         </ul>
 
