--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -1,13 +1,48 @@
 <footer class="footer sec" id="kontakt">
   <div class="container">
     <div class="footer__main">
-      <h2 class="footer__title title">Kontakt: </h2>
-      <p class="footer__text">Notfälle:
-        <a class="footer__link" href="tel:06221-4886000">06221-4886000</a>
-      </p>
-      <p class="footer__text">Anmeldung/Sekretariat:
-        <a class="footer__link" href="mailto:brustzentrum@kse-hd.de">brustzentrum@kse-hd.de</a>
-      </p>
+
+      <div class="footer__map map-footer">
+        <div class="map-footer__image ibga">
+          <img src="@img/footer/01.png" alt="map">
+          <span class="map-footer__location icon-location"></span>
+        </div>
+      </div>
+
+      <div class="footer__contacts contacts-footer">
+
+        <div class="contacts-footer__row">
+          <h2 class="contacts-footer__title title">So finden Sie uns</h2>
+        </div>
+
+        <div class="contacts-footer__row">
+          <h4 class="contacts-footer__subtitle contacts-footer__subtitle_big">Klinik Sankt Elisabeth</h4>
+          <p class="contacts-footer__text">Max-Reger-Straße 5-7,<br> 69121 Heidelberg</p>
+        </div>
+
+        <div class="contacts-footer__row">
+          <h4 class="contacts-footer__subtitle text">Notfälle</h4>
+          <a class="contacts-footer__link" href="tel:062214886000">06221-4886000</a>
+        </div>
+
+        <div class="contacts-footer__row">
+          <h4 class="contacts-footer__subtitle text">Anmeldung/Sekretariat:</h4>
+          <a class="contacts-footer__link contacts-footer__link_mail"
+            href="mailto:brustzentrum@kse-hd.de">brustzentrum@kse-hd.de</a>
+        </div>
+
+      </div>
+
+      <div class="footer__info info-footer">
+        <h4 class="info-footer__subtitle"><span class="icon-i"></span> Mit öffentlichen Verkehrsmitteln</h4>
+
+        <p class="info-footer__text text">Vom Heidelberger Hauptbahnhof fährt man mit der Straßenbahn HSB Linie 21 bzw.
+          24 bis zur Haltestelle „Handschuhsheim, Heiligenbergschule“. Von Dort sind es zu Fuß noch ca.700 m bis zur
+          Klinik.
+          Sie können auch vom Bismarckplatz aus mit der HSB Linie 5 bzw. Linie 23 starten. Von der Haltestelle
+          Blumenthalstraße sind es ebenfalls ca. 700 m bis zu unserer Klinik</p>
+      </div>
+
     </div>
   </div>
 </footer>
