fix padding footer info

--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -25,8 +25,8 @@
           <li><a class="menu__link" href="#verfugen">Wir verfügen über</a></li>
           <li>
             <a class="menu__link" href="#kontakt">Kontakt</a>
-            <a class="header__phone menu__phone" href="tel:062214880"><span class="icon-phone"></span> 06221 - 48
-              80</a>
+            <a class="header__phone menu__phone" href="tel:062214886000"><span class="icon-phone"></span>
+              06221-4886000</a>
           </li>
         </ul>
 
