--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                 <p class="info-team__text text">Ein multiprofessionelles Team um Prof. Jörg Heil und Prof. Michael
                   Golatta hat über viele Jahre am Universitätsklinikum Heidelberg, eine der renommiertesten
                   Krebskliniken in Deutschland, das Universitäts-Brustzentrum geprägt.</p>
-                <a class="info-team__btn btn" href="#">All team <span class="icon-arrow-l"></span></a>
+                <a class="info-team__btn btn" href="team.html">All team <span class="icon-arrow-l"></span></a>
               </div>
 
             </div>
