add style / create slider

--- a/src/team.html
+++ b/src/team.html
@@ -67,6 +67,18 @@
                     <img src="@img/team-page/05.jpg" alt="image">
                   </div>
 
+                  <div class="drs-team-page__img swiper-slide">
+                    <img src="@img/team-page/01.jpg" alt="image">
+                  </div>
+
+                  <div class="drs-team-page__img swiper-slide">
+                    <img src="@img/team-page/02.jpg" alt="image">
+                  </div>
+
+                  <div class="drs-team-page__img swiper-slide">
+                    <img src="@img/team-page/03.jpg" alt="image">
+                  </div>
+
                 </div>
               </div>
 
