fix / team-page style / block >hover-team-page< / team-info.js

--- a/src/team.html
+++ b/src/team.html
@@ -67,18 +67,6 @@
                     <img class="sw-i" src="@img/team-page/05.jpg" alt="image">
                   </div>
 
-                  <div class="drs-team-page__img swiper-slide">
-                    <img class="sw-i" src="@img/team-page/01.jpg" alt="image">
-                  </div>
-
-                  <div class="drs-team-page__img swiper-slide">
-                    <img class="sw-i" src="@img/team-page/02.jpg" alt="image">
-                  </div>
-
-                  <div class="drs-team-page__img swiper-slide">
-                    <img class="sw-i" src="@img/team-page/03.jpg" alt="image">
-                  </div>
-
                 </div>
               </div>
 
@@ -89,74 +77,82 @@
               </div>
 
               <div class="team-page__hover hover-team-page">
-                <span class="hover-team-page__pointer"></span>
 
-                <h2 class="hover-team-page__title title">Prof. Dr. Jörg Heil</h2>
+                <div class="hover-team-page__item">
+                  <span class="hover-team-page__pointer"></span>
 
-                <p class="hover-team-page__text text">Seit vielen Jahren beschäftige ich mich nahezu ausschließlich mit
-                  diagnostischen, chirurgischen, medikamentösen, und teilweise auch strahlentherapeutischen Aspekten der
-                  weiblichen (selten männlichen) Brust. Die Beratung und Behandlung von Brustkrebspatientinnen ist mein
-                  Schwerpunkt.</p>
+                  <h2 class="hover-team-page__title title">Prof. Dr. Jörg Heil</h2>
 
-                <div class="hover-team-page__box">
+                  <p class="hover-team-page__text text">Seit vielen Jahren beschäftige ich mich nahezu ausschließlich
+                    mit
+                    diagnostischen, chirurgischen, medikamentösen, und teilweise auch strahlentherapeutischen Aspekten
+                    der
+                    weiblichen (selten männlichen) Brust. Die Beratung und Behandlung von Brustkrebspatientinnen ist
+                    mein
+                    Schwerpunkt.</p>
 
-                  <div class="hover-team-page__info">
-                    <h4 class="hover-team-page__subtitle hover-team-page__subtitle_big">Beratung und Behandlungsspektrum
-                      Mammachirurgie</h4>
-                    <ul class="hover-team-page__list">
-                      <li class="hover-team-page__li text">Brusterhaltende Operation</li>
-                      <li class="hover-team-page__li text">Mastektomie / Ablatio / Brustentfernung</li>
-                      <li class="hover-team-page__li text">Sentinel node Biopsie / Entfernung des Wächter Lymphknotens
-                      </li>
-                      <li class="hover-team-page__li text">Targeted axillary surgery / fokussierte, gezielte
-                        Axillachirurgie</li>
-                      <li class="hover-team-page__li text">Onkoplastik Brusterhaltung</li>
-                      <li class="hover-team-page__li text">Rotationslappenplastik</li>
-                      <li class="hover-team-page__li text">Dermoglanduläre Verschiebelappenplastik</li>
-                      <li class="hover-team-page__li text">Mastopexie</li>
-                      <li class="hover-team-page__li text">Reduktionsplastik</li>
-                      <li class="hover-team-page__li text">Implantatrekonstruktion</li>
-                      <li class="hover-team-page__li text">Augmentation</li>
-                      <li class="hover-team-page__li text">Expandereinlage</li>
-                      <li class="hover-team-page__li text">Symmetrisierungsoperationen</li>
-                      <li class="hover-team-page__li text">Freie / mikrochirurgische Lappenplastiken zur
-                        Brustrekonstruktion</li>
-                      <li class="hover-team-page__li text">Lipotransfer</li>
-                      <li class="hover-team-page__li text">Etc.</li>
-                    </ul>
+                  <div class="hover-team-page__box">
+
+                    <div class="hover-team-page__info">
+                      <h4 class="hover-team-page__subtitle hover-team-page__subtitle_big">Beratung und
+                        Behandlungsspektrum
+                        Mammachirurgie</h4>
+                      <ul class="hover-team-page__list">
+                        <li class="hover-team-page__li text">Brusterhaltende Operation</li>
+                        <li class="hover-team-page__li text">Mastektomie / Ablatio / Brustentfernung</li>
+                        <li class="hover-team-page__li text">Sentinel node Biopsie / Entfernung des Wächter Lymphknotens
+                        </li>
+                        <li class="hover-team-page__li text">Targeted axillary surgery / fokussierte, gezielte
+                          Axillachirurgie</li>
+                        <li class="hover-team-page__li text">Onkoplastik Brusterhaltung</li>
+                        <li class="hover-team-page__li text">Rotationslappenplastik</li>
+                        <li class="hover-team-page__li text">Dermoglanduläre Verschiebelappenplastik</li>
+                        <li class="hover-team-page__li text">Mastopexie</li>
+                        <li class="hover-team-page__li text">Reduktionsplastik</li>
+                        <li class="hover-team-page__li text">Implantatrekonstruktion</li>
+                        <li class="hover-team-page__li text">Augmentation</li>
+                        <li class="hover-team-page__li text">Expandereinlage</li>
+                        <li class="hover-team-page__li text">Symmetrisierungsoperationen</li>
+                        <li class="hover-team-page__li text">Freie / mikrochirurgische Lappenplastiken zur
+                          Brustrekonstruktion</li>
+                        <li class="hover-team-page__li text">Lipotransfer</li>
+                        <li class="hover-team-page__li text">Etc.</li>
+                      </ul>
+                    </div>
+
+                    <div class="hover-team-page__info">
+                      <h4 class="hover-team-page__subtitle">Mammadiagnostik</h4>
+                      <ul class="hover-team-page__list">
+                        <li class="hover-team-page__li text">Mammographie / Tomosynthese / Kontrastmittelmammographie
+                        </li>
+                        <li class="hover-team-page__li text">Sonographie / Elastographie / Dopplersonographie /
+                          automatischer Brustultraschall / Brustvolumenscanner</li>
+                        <li class="hover-team-page__li text">MRT Mamma</li>
+                        <li class="hover-team-page__li text">Vakuumbiopsie</li>
+                        <li class="hover-team-page__li text">Stanzbiopsie</li>
+                        <li class="hover-team-page__li text">Markierungstechniken</li>
+                        <li class="hover-team-page__li text">Minimal invasive Therapie</li>
+                      </ul>
+                    </div>
+
+                    <div class="hover-team-page__info">
+                      <h4 class="hover-team-page__subtitle">Multimodale Therapie</h4>
+                      <ul class="hover-team-page__list">
+                        <li class="hover-team-page__li text">Chemotherapie</li>
+                        <li class="hover-team-page__li text">Genexpressionsprofile</li>
+                        <li class="hover-team-page__li text">Antikörper Therapie</li>
+                        <li class="hover-team-page__li text">Immuntherapie</li>
+                        <li class="hover-team-page__li text">Supportivtherapie</li>
+                        <li class="hover-team-page__li text">Strahlentherapie</li>
+                        <li class="hover-team-page__li text">IORT</li>
+                        <li class="hover-team-page__li text">Brachytherapie</li>
+                      </ul>
+                    </div>
+
                   </div>
-
-                  <div class="hover-team-page__info">
-                    <h4 class="hover-team-page__subtitle">Mammadiagnostik</h4>
-                    <ul class="hover-team-page__list">
-                      <li class="hover-team-page__li text">Mammographie / Tomosynthese / Kontrastmittelmammographie</li>
-                      <li class="hover-team-page__li text">Sonographie / Elastographie / Dopplersonographie /
-                        automatischer Brustultraschall / Brustvolumenscanner</li>
-                      <li class="hover-team-page__li text">MRT Mamma</li>
-                      <li class="hover-team-page__li text">Vakuumbiopsie</li>
-                      <li class="hover-team-page__li text">Stanzbiopsie</li>
-                      <li class="hover-team-page__li text">Markierungstechniken</li>
-                      <li class="hover-team-page__li text">Minimal invasive Therapie</li>
-                    </ul>
-                  </div>
-
-                  <div class="hover-team-page__info">
-                    <h4 class="hover-team-page__subtitle">Multimodale Therapie</h4>
-                    <ul class="hover-team-page__list">
-                      <li class="hover-team-page__li text">Chemotherapie</li>
-                      <li class="hover-team-page__li text">Genexpressionsprofile</li>
-                      <li class="hover-team-page__li text">Antikörper Therapie</li>
-                      <li class="hover-team-page__li text">Immuntherapie</li>
-                      <li class="hover-team-page__li text">Supportivtherapie</li>
-                      <li class="hover-team-page__li text">Strahlentherapie</li>
-                      <li class="hover-team-page__li text">IORT</li>
-                      <li class="hover-team-page__li text">Brachytherapie</li>
-                    </ul>
-                  </div>
-
                 </div>
-              </div>
 
+              </div>
             </div>
           </div>
         </div>
