appointment -> Termin / Make an appointment на Vereinbaren einen Termin / map link

--- a/src/diagnostik.html
+++ b/src/diagnostik.html
@@ -76,7 +76,7 @@
                 </p>
               </div>
               <div class="body-diagnostik-page__row">
-                <a class="body-diagnostik-page__btn btn" href="#">Make an appointment</a>
+                <a class="body-diagnostik-page__btn btn" href="#">Vereinbaren einen Termin</a>
               </div>
             </div>
           </div>
