Termine > Termin / set mail in buttons

--- a/src/diagnostik.html
+++ b/src/diagnostik.html
@@ -76,7 +76,9 @@
                 </p>
               </div>
               <div class="body-diagnostik-page__row">
-                <a class="body-diagnostik-page__btn btn" href="#">Vereinbaren einen Termin</a>
+                <a class="body-diagnostik-page__btn btn"
+                  href="mailto:brustzentrum@kse-hd.de?subject=Terminvereinbarung Brustzentrum Heidelberg&amp;">Vereinbaren
+                  einen Termin</a>
               </div>
             </div>
           </div>
