--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,8 @@
                         Experten aller Fachdisziplinenen (u.a. Psychoonkologie, Sozialmedizin, Ernährungsmedizin,
                         Selbsthilfegruppen, Schmerztherapie, Rehabilitation), dem Mammographiescreening Programm, dem
                         Nationalen Centrum für Tumorerkrankungen sowie dem Universitätsklinikum Heidelberg </p>
-                      <a class="body-verfugen__btn btn" href="#">Termin</a>
+                      <a class="body-verfugen__btn btn"
+                        href="mailto:brustzentrum@kse-hd.de?subject=Terminvereinbarung Brustzentrum Heidelberg&amp;">Termin</a>
                     </div>
                   </div>
 
