--- a/src/team.html
+++ b/src/team.html
@@ -49,22 +49,27 @@
 
                   <div class="drs-team-page__img swiper-slide">
                     <img class="sw-i" src="@img/team-page/01.jpg" alt="image">
+                    <span class="drs-team-page__p"></span>
                   </div>
 
                   <div class="drs-team-page__img swiper-slide">
                     <img class="sw-i" src="@img/team-page/02.jpg" alt="image">
+                    <span class="drs-team-page__p"></span>
                   </div>
 
                   <div class="drs-team-page__img swiper-slide">
                     <img class="sw-i" src="@img/team-page/03.jpg" alt="image">
+                    <span class="drs-team-page__p"></span>
                   </div>
 
                   <div class="drs-team-page__img swiper-slide">
                     <img class="sw-i" src="@img/team-page/04.jpg" alt="image">
+                    <span class="drs-team-page__p"></span>
                   </div>
 
                   <div class="drs-team-page__img swiper-slide">
                     <img class="sw-i" src="@img/team-page/05.jpg" alt="image">
+                    <span class="drs-team-page__p"></span>
                   </div>
 
                 </div>
@@ -76,11 +81,9 @@
                   Spezialisierung, menschlicher Zuwendung und kollegialer Kooperation zu werden. </p>
               </div>
 
-              <div class="team-page__hover hover-team-page">
+              <div class="team-page__hover hover-team-page show-info">
 
                 <div class="hover-team-page__item">
-                  <span class="hover-team-page__pointer"></span>
-
                   <h2 class="hover-team-page__title title">Prof. Dr. Jörg Heil</h2>
 
                   <p class="hover-team-page__text text">Seit vielen Jahren beschäftige ich mich nahezu ausschließlich
@@ -100,7 +103,8 @@
                       <ul class="hover-team-page__list">
                         <li class="hover-team-page__li text">Brusterhaltende Operation</li>
                         <li class="hover-team-page__li text">Mastektomie / Ablatio / Brustentfernung</li>
-                        <li class="hover-team-page__li text">Sentinel node Biopsie / Entfernung des Wächter Lymphknotens
+                        <li class="hover-team-page__li text">Sentinel node Biopsie / Entfernung des Wächter
+                          Lymphknotens
                         </li>
                         <li class="hover-team-page__li text">Targeted axillary surgery / fokussierte, gezielte
                           Axillachirurgie</li>
@@ -153,6 +157,7 @@
                 </div>
 
               </div>
+
             </div>
           </div>
         </div>
