--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -28,7 +28,7 @@
         <div class="contacts-footer__row">
           <h4 class="contacts-footer__subtitle text">Anmeldung/Sekretariat:</h4>
           <a class="contacts-footer__link contacts-footer__link_mail"
-            href="mailto:brustzentrum@kse-hd.de">brustzentrum@kse-hd.de</a>
+            href="mailto:brustzentrum@kse-hd.de?subject=Terminvereinbarung Brustzentrum Heidelberg&amp;">brustzentrum@kse-hd.de</a>
         </div>
 
       </div>
