remover section werwir / create vision

--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -20,9 +20,10 @@
         </div>
 
         <ul class="menu__list">
-          <li><a class="menu__link" href="#werwir">Wer wir sind</a></li>
-          <li><a class="menu__link" href="#diagnostik">Diagnostik</a></li>
-          <li><a class="menu__link" href="#team">Team</a></li>
+          <li><a class="menu__link" href="#vision">Unsere Vision</a></li>
+          <li><a class="menu__link" href="#diagnostik">Unsere Brustdiagnostik</a></li>
+          <li><a class="menu__link" href="#team">Unsere Brustchirurgie</a></li>
+          <li><a class="menu__link" href="#verfugen">Unser Team</a></li>
           <li><a class="menu__link" href="#verfugen">Wir verfügen über</a></li>
           <li>
             <a class="menu__link" href="#kontakt">Kontakt</a>
