--- a/src/index.html
+++ b/src/index.html
@@ -20,28 +20,22 @@
     <!-- main -->
     <main class="main">
 
-      <!-- werwir -->
-      <section class="werwir sec" id="werwir">
+      <!-- vision -->
+      <section class="vision sec" id="vision">
         <div class="container">
-          <div class="werwir__main">
+          <div class="vision__main">
 
-            <div class="werwir__info info-werwir">
-              <div class="info-werwir__logo ibga">
-                <img src="@img/logo.svg" alt="logo">
-              </div>
-
-              <h2 class="info-werwir__title title">Langjährige universitäre Expertise und persönliche,
-                individuelle
+            <div class="vision__info info-vision">
+              <h2 class="info-vision__title title">Langjährige universitäre Expertise und persönliche, individuelle
                 Zuwendung</h2>
-              <p class="info-werwir__text text">Im Brustzentrum Heidelberg an der Klinik St. Elisabeth vereinen wir
+              <p class="info-vision__text text">Im Brustzentrum Heidelberg an der Klinik St. Elisabeth vereinen wir
                 medizinische Exzellenz mit Hightech-Ausstattung und Strukturen, die menschlich und überschaubar sind.
-                Für Ihre Behandlung steht ein Team aus deutschlandweit renommierten Expertinnen und Experten zur
-                Verfügung, die sich spezialisiert haben auf Vorsorge, Früherkennung und Therapie von Brustkrebs. </p>
+              </p>
             </div>
 
-            <div class="werwir__image image-werwir">
-              <div class="image-werwir__img ibga">
-                <img src="@img/werwir/01.png" alt="image">
+            <div class="vision__image image-vision">
+              <div class="image-vision__img ibga">
+                <img src="@img/vision/01.png" alt="image">
               </div>
             </div>
 
