edit diagnostik section

--- a/src/index.html
+++ b/src/index.html
@@ -48,22 +48,13 @@
         <div class="container">
           <div class="diagnostik__main">
 
-            <div class="diagnostik__img ibga">
-              <img src="@img/diagnostik/02.jpg" alt="image">
-            </div>
-
-            <div class="diagnostik__info info-diagnostik">
-              <div class="info-diagnostik__wrapp">
-                <h2 class="info-diagnostik__title title">Hochspezialisierte Diagnostik und Therapie von Auffälligkeiten
-                  in der Brust</h2>
-                <p class="info-diagnostik__text text">Sie oder Ihr Arzt haben in Ihrer Brust eine Veränderung
-                  festgestellt, die abgeklärt werden muss. Oder Sie wünschen eine Zweitmeinung, wenn die
-                  Brustkrebserkrankung schon gesichert ist. Sie haben wahrscheinlich nicht nur Angst, sondern auch viele
-                  Fragen. Wir stehen Ihnen während der Abklärung und ggfs. für weitere notwendige Behandlungen
-                  aufmerksam und mit unseren professionellen Erfahrungen zur Seite. </p>
-                <a class="info-diagnostik__btn btn" href="diagnostik.html"><span>More</span> <span
-                    class="icon-arrow-f"></span></a>
-              </div>
+            <div class="diagnostik__body">
+              <p class="diagnostik__text text">Für Ihre Behandlung steht ein Team aus deutschlandweit renommierten
+                Expertinnen und Experten zur Verfügung, die sich spezialisiert haben auf Vorsorge, Früherkennung und
+                Therapie von Brustkrebs. Unser Schwerpunkt hierbei liegt auf Brustdiagnostik und Brustchirurgie.</p>
+              <p class="diagnostik__text text">Wir legen großen Wert auf die Unterstützung unserer
+                medizinisch-wissenschaftlichen Angebotes durch unser Team spezialisierter Pflege ExpertInnen und (u. a.
+                radiologischen) AssistentInnen, welche sich aufmerksam, empathisch und professionell um Sie kümmert.</p>
             </div>
 
           </div>
