rename section diagnostik to behandlung / remove diagnostik.html

--- a/src/index.html
+++ b/src/index.html
@@ -43,16 +43,16 @@
         </div>
       </section>
 
-      <!-- diagnostik -->
-      <section class="diagnostik sec" id="diagnostik">
+      <!-- behandlung -->
+      <section class="behandlung">
         <div class="container">
-          <div class="diagnostik__main">
+          <div class="behandlung__main">
 
-            <div class="diagnostik__body">
-              <p class="diagnostik__text text">Für Ihre Behandlung steht ein Team aus deutschlandweit renommierten
+            <div class="behandlung__body">
+              <p class="behandlung__text text">Für Ihre Behandlung steht ein Team aus deutschlandweit renommierten
                 Expertinnen und Experten zur Verfügung, die sich spezialisiert haben auf Vorsorge, Früherkennung und
                 Therapie von Brustkrebs. Unser Schwerpunkt hierbei liegt auf Brustdiagnostik und Brustchirurgie.</p>
-              <p class="diagnostik__text text">Wir legen großen Wert auf die Unterstützung unserer
+              <p class="behandlung__text text">Wir legen großen Wert auf die Unterstützung unserer
                 medizinisch-wissenschaftlichen Angebotes durch unser Team spezialisierter Pflege ExpertInnen und (u. a.
                 radiologischen) AssistentInnen, welche sich aufmerksam, empathisch und professionell um Sie kümmert.</p>
             </div>
