create brustchirurgie section

--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,39 @@
         </div>
       </section>
 
+      <!-- brustchirurgie -->
+      <section class="brustchirurgie sec" id="brustchirurgie">
+        <div class="container">
+          <div class="brustchirurgie__main">
+            <div class="brustchirurgie__body">
+
+              <div class="brustchirurgie__row">
+                <h2 class="brustchirurgie__title title">Onkoplastistische Brustchirurgie</h2>
+              </div>
+
+              <div class="brustchirurgie__row">
+                <div class="brustchirurgie__col">
+                  <p class="brustchirurgie__text text">Wir bieten schonende und organerhaltende Operationsverfahren
+                    unter besonderer Berücksichtigung funktioneller und ästhetischer Aspekte (z.B.
+                    Wächter-Lymphknoten-Operation bis zu allen Methoden zum Wiederaufbau der Brust) an und sind hier
+                    federführend in nationalen und internationalen Konsortien aktiv (z. B. oncoplastic breast
+                    consortium, AWOgyn). </p>
+                </div>
+
+                <div class="brustchirurgie__col">
+                  <p class="brustchirurgie__text text">Alle unsere Operateure sind Senior-Mammaoperateure nach DKG.
+                    Ausserdem verfügen wir über große Erfahrung in wiederherstellenden Operationen der Brust (u.a.
+                    Brustoperateur der AWOgyn).</p>
+                  <p class="brustchirurgie__text text">Wir verfügen über alle Ausstattungsmerkmale eines modernen
+                    operativen Zentrums mit erfahrener, fachärztlicher anästhesiologischer Kompetenz. </p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- team -->
       <section class="team sec" id="team">
         <div class="team__wrapp">
