--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="header__body">
-      <a class="header__phone" href="tel:062214886000"><span class="icon-phone"></span> 06221-4886000</a>
+      <a class="header__phone" href="tel:062214886000"><span class="icon-phone"></span> 06221-488-6000</a>
       <a class="header__btn btn"
         href="mailto:brustzentrum@kse-hd.de?subject=Terminvereinbarung Brustzentrum Heidelberg&amp;">Termin</a>
     </div>
