edit section team

--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -22,7 +22,7 @@
         <ul class="menu__list">
           <li><a class="menu__link" href="#vision">Unsere Vision</a></li>
           <li><a class="menu__link" href="#brustdiagnostik">Unsere Brustdiagnostik</a></li>
-          <li><a class="menu__link" href="#brustchirurgi">Unsere Brustchirurgie</a></li>
+          <li><a class="menu__link" href="#brustchirurgie">Unsere Brustchirurgie</a></li>
           <li><a class="menu__link" href="#team">Unser Team</a></li>
           <li>
             <a class="menu__link" href="#kontakt">Kontakt</a>
