--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -12,35 +12,36 @@
       <div class="footer__contacts contacts-footer">
 
         <div class="contacts-footer__row">
-          <h2 class="contacts-footer__title title">So finden Sie uns</h2>
+          <h2 class="contacts-footer__title title">Kontakt / Terminvereinbarung</h2>
         </div>
 
         <div class="contacts-footer__row">
-          <h4 class="contacts-footer__subtitle contacts-footer__subtitle_big">Klinik Sankt Elisabeth</h4>
-          <p class="contacts-footer__text">Max-Reger-Straße 5-7,<br> 69121 Heidelberg</p>
+          <h4 class="contacts-footer__subtitle">Brustzentrum Heidelberg<br> Klinik St. Elisabeth</h4>
+          <p class="contacts-footer__text">
+            Max-Reger-Straße 5-7,<br> 69121 Heidelberg</p>
         </div>
 
         <div class="contacts-footer__row">
-          <h4 class="contacts-footer__subtitle text">Notfälle</h4>
-          <a class="contacts-footer__link" href="tel:062214886000">06221-4886000</a>
+          <p class="contacts-footer__text">Telefon
+            <a class="contacts-footer__text contacts-footer__link" href="tel:062214886000">06221-488-6000</a>
+          </p>
+
+          <p class="contacts-footer__text">Telefax
+            <a class="contacts-footer__text contacts-footer__link" href="tel:062214886050">06221-488-6050</a>
+          </p>
         </div>
 
         <div class="contacts-footer__row">
-          <h4 class="contacts-footer__subtitle text">Anmeldung/Sekretariat:</h4>
-          <a class="contacts-footer__link contacts-footer__link_mail"
+          <a class="contacts-footer__text contacts-footer__link contacts-footer__mail"
             href="mailto:brustzentrum@kse-hd.de?subject=Terminvereinbarung Brustzentrum Heidelberg&amp;">brustzentrum@kse-hd.de</a>
         </div>
 
       </div>
 
       <div class="footer__info info-footer">
-        <h4 class="info-footer__subtitle"><span class="icon-i"></span> Mit öffentlichen Verkehrsmitteln</h4>
-
-        <p class="info-footer__text text">Vom Heidelberger Hauptbahnhof fährt man mit der Straßenbahn HSB Linie 21 bzw.
-          24 bis zur Haltestelle „Handschuhsheim, Heiligenbergschule“. Von Dort sind es zu Fuß noch ca.700 m bis zur
-          Klinik.
-          Sie können auch vom Bismarckplatz aus mit der HSB Linie 5 bzw. Linie 23 starten. Von der Haltestelle
-          Blumenthalstraße sind es ebenfalls ca. 700 m bis zu unserer Klinik</p>
+        <div class="info-footer__logo ibga">
+          <img src="@img/footer/logo.svg" alt="logo">
+        </div>
       </div>
 
     </div>
