add logo in main page

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,13 @@
     <!-- main -->
     <main class="main">
 
+      <!-- logo -->
+      <div class="logo">
+        <div class="logo__image ibga">
+          <img src="@img/logo.svg" alt="logo">
+        </div>
+      </div>
+
       <!-- vision -->
       <section class="vision sec" id="vision">
         <div class="container">
