--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
             <div class="vision__image image-vision">
               <div class="image-vision__img ibga">
-                <img src="@img/vision/011.png" alt="image">
+                <!-- <img src="@img/vision/011.png" alt="image"> -->
               </div>
             </div>
 
