--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
             </div>
 
             <div class="vision__image image-vision">
-              <div class="image-vision__img ibga">
-                <img src="@img/vision/01.png" alt="image">
+              <div class="image-vision__img">
+                <img src="@img/vision/22.png" alt="image">
               </div>
             </div>
 
@@ -100,7 +100,7 @@
               </div>
 
               <div class="bottom-brustdiagnostik__img ibga">
-                <img src="@img/brustdiagnostik/02.webp" alt="image">
+                <img src="@img/brustdiagnostik/02.png" alt="image">
               </div>
             </div>
           </div>
